# quasar-webview

./: package.json
demo/: package.json  quasar.conf.js  quasar.extensions.json
demo/src-webview/: Cargo.toml
demo/src-webview/.cargo/: config
demo/src-webview/src/: app.rs  main.rs  updater.rs
demo/src-webview/src/portal/: macros.rs  mod.rs
demo/src-webview/src/portal/file/: error.rs  extract.rs  file_move.rs  mod.rs
demo/src-webview/src/portal/http/: error.rs  macros.rs  mod.rs
demo/src-webview/src/portal/updater/github/: error.rs  mod.rs  release.rs
demo/src-webview/src/portal/version/: error.rs
demo/src/pages/: Index.vue
src/: index.js  install.js  prompts.js
src/lib/: config.js  installer.js  logger.js  prompt.js  runner.js
src/rust/: build.js  dev.js  ensure-deps.js  install.js
src/rust/helpers/: prompts.js
